prevent zooming on mobile browser

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+@media (min-width: 320px) {
 	body {
 		width: 90%;
 	}
